# DoPARSE

./: .gitignore  README.md  pyproject.toml  tasks.py
src/doparse/: __init__.py  __main__.py  marker_ocr.py  smoldocling_ocr.py  utils.py
tests/: conftests.py
